# pdi

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  ACKNOWLEDGMENTS.md  AUTHORS  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.new  CONTRIBUTING.md  LICENSE  PACKAGING.md  README.md  REUSE.toml  TODO  TODO.md  VERSION  pdi.doxygen  run-ci-local.sh  run-local-CI-indent.sh  run-local-CI.sh  spack.yaml  tutorialInstallation.sh  tutorialSetupDeisa.sh
cmake_test/: AUTHORS  CHANGELOG.md  CMakeLists.txt
cmake_test/subdir/: CMakeLists.txt
example/: AUTHORS  CHANGELOG.md  CMakeLists.txt  README.md  catalyst.yml.in  catalyst_pipeline_with_rendering.py  catalyst_serial.yml.in  config.fti  config.xml  confpdi.yml  damaris.yml  decl_hdf5.yml  decl_netcdf.yml  decl_netcdf_serial.yml  decl_sion_files.yml  decl_sion_variables.yml  deisa.yml  deisa_client.py  example.F90  example.c  example.f90  example.py  example.yml  example2-fti.yml  example2.c  example2.fti  example2.yml  example3.yml  example4.yml  exampleFTI.c  flowvr.py  flowvr.yml  flowvr_test.sh  flowvr_visu.c  flowvr_visu.yml  fti.yml  fti_config.ini  fti_transtype.yml  json.yml  no-pdi_exampleTargetCMakeLists.txt  (+19 more)
example/cmake/: DefaultKind.cmake  FindAstyle.cmake  PDIConfig.cmake  runtest-dir-catalyst  version-uid
mock_pdi/: AUTHORS  CHANGELOG.md  CMakeLists.txt  PDIConfig.cmake  PDIConfigVersion.cmake  pdi.h
no-pdi/: CMakeLists.txt  FindPDI.cmake  exampleTargetCMakeLists.txt  no-pdi.cmake
no-pdi/cmake/: FindPDI.cmake  PDIConfig.cmake  PDIConfigVersion.cmake  PDITargets.cmake  no-pdi.cmake
no-pdi/include/: pdi.h
no-pdi/scripts/: env.xsh
pdi/: .clang-format  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  VERSION
pdi/benchmarks/: CMakeLists.txt  PDI_callbacks.cxx  PDI_context.cxx  PDI_datatype_template.cxx  PDI_example.cxx  PDI_expression.cxx  PDI_logger.cxx
pdi/cmake/: DefaultKind.cmake  FindGMock.cmake  FindPython3Path.cmake  PDIConfig.cmake.in  version-uid
pdi/docs/: About.md  CMakeLists.txt  CheckList.md  Concepts.md  Doxyfile  FAQ.md  First_steps.md  How_to_create_plugin.md  Installation.md  PDI_Types.md  Plugins.md  Source_installation.md  Specification_tree_ref.md  Using_PDI.md  Yaml.md  expression_grammar.in.txt  expression_grammar.in.txt.license  hello_access.f90  hello_event.yml  hello_expose.c  hello_multi_expose.f90  modules.md
pdi/include/: pdi.F90  pdi.h  pdi.h.orig  pdi_deactivation.h
pdi/scripts/: env.bash.in  env.sh.in  env.xsh  pdirun  pdirun.in  pdirun_intree
pdi/src/: array_datatype.cxx  callbacks.cxx  config.h.in  context.cxx  context_proxy.cxx  data_descriptor.cxx  data_descriptor_impl.cxx  data_descriptor_impl.h  data_store.cxx  datatype.cxx  datatype_expression.cxx  datatype_template.cxx  datatype_template_reference.cxx  delayed_data_callbacks.cxx  error.cxx  expression.cxx  global_context.cxx  global_context.h  logger.cxx  paraconf_wrapper.cxx  pdi.cxx  pdi.cxx.orig  pdi_instance.cxx  pdi_instance.h  plugin.cxx  plugin_store.cxx  plugin_store.h  pointer_datatype.cxx  record_datatype.cxx  ref_any.cxx  scalar_datatype.cxx  string_tools.cxx  string_tools.h  timer.cxx  tuple_datatype.cxx  version.h.in
pdi/tests/: CMakeLists.txt  PDI_C_API.cxx  PDI_array_datatype.cxx  PDI_callbacks.cxx  PDI_context.cxx  PDI_data_descriptor.cxx  PDI_datatype_attributes.cxx  PDI_delayed_data_callbacks.cxx  PDI_error.cxx  PDI_expression.cxx  PDI_gpu_support.cxx  PDI_initialize_plugins.cxx  PDI_member.cxx  PDI_pointer_datatype.cxx  PDI_python_tools.cxx  PDI_record_datatype.cxx  PDI_record_datatype_cases.h  PDI_record_datatype_empty.cxx  PDI_ref_any.cxx  PDI_scalar_datatype.cxx  PDI_test_01.c  PDI_test_02.c  PDI_test_03.py  PDI_test_04.py  PDI_test_05.py  PDI_test_parse_types.cxx  PDI_tuple_datatype.cxx  PDI_tuple_datatype_cases.h  expression.cxx  modulo.cxx  operators.h  paraconf_wrapper.cxx  parsed_expression.cxx  parsed_modulo.cxx  test_env_sh
plugins/FTI/: CMakeLists.txt  fti_plugin.c  fti_plugin.cxx
plugins/HDF5_per_process/: CMakeLists.txt  hdf5_per_process.c
plugins/Parallel_DeclH5/: CMakeLists.txt  parallel_declh5.c  parallel_declh5.cxx
plugins/SIONlib/: CMakeLists.txt  SIONlib.c  SIONlib.cxx
plugins/VeloC/: .gitignore  CMakeLists.txt  README.md  veloc.cxx  veloc_cfg.cxx  veloc_cfg.h  veloc_wrapper.cxx  veloc_wrapper.h
plugins/catalyst/: CMakeLists.txt  NOTICE  README.md  catalyst_plugin_structured_ghost.h  pdi_catalyst_plugin.cxx  pdi_catalyst_plugin.h
plugins/checkpoint/: CMakeLists.txt  checkpoint.cxx
plugins/damaris/: AUTHORS  CMakeLists.txt  README.md  damaris.cxx  damaris_api_call_handler.cxx  damaris_api_call_handler.h  damaris_async_gather.h  damaris_cfg.cxx  damaris_cfg.h  damaris_wrapper.cxx  damaris_wrapper.h
src/: CMakeLists.txt  PDI.h.bpp  api.c  api.cxx  array_datatype.cxx  callbacks.cxx  conf.c  conf.cxx  conf.h  config.h.in  context.cxx  context_core.cxx  context_proxy.cxx  data.c  data.cxx  data_content.cxx  data_descriptor.cxx  data_descriptor_impl.cxx  data_descriptor_impl.h  data_reference.cxx  data_type.cxx  datatype.c  datatype.cxx  datatype.h  datatype_template.cxx  error.c  error.cxx  error.h  expression.cxx  fapi.c  global_context.cxx  global_context.h  internal.h  logger.cxx  paraconf_wrapper.cxx  paraconf_wrapper.h  pdi.F90  pdi.F90.bpp  pdi.c  pdi.cxx  (+42 more)
test_api/: AUTHORS  CHANGELOG.md  CMakeLists.txt  test_api.c  test_api.cpp  test_api.h
tests/: .clang-format  AUTHORS  CHANGELOG.md  CMakeLists.txt  Mixing_DeclH5_test_01.c  Mixing_DeclH5_test_01_C.yml  PDI_array_datatype.cxx  PDI_context.cxx  PDI_data_descriptor.cxx  PDI_error.cxx  PDI_expression.cxx  PDI_initialize_plugins.cxx  PDI_member.cxx  PDI_record_datatype.cxx  PDI_record_datatype_cases.h  PDI_record_datatype_empty.cxx  PDI_ref_any.cxx  PDI_scalar_datatype.cxx  PDI_test_01.c  PDI_test_01.yml  PDI_test_02.c  PDI_test_02.yml  PDI_test_03.c  PDI_test_03.py  PDI_test_03.yml  PDI_test_parse_types.cxx  README.md  Utilities_test_02.c  Utilities_test_02.yml  add_all_tests.sh  test.h  test1.c  test2.c  test2.f90  test2.yml  test3.c  test3.yml  test_01.c  test_01.yml  test_02.c  (+28 more)
(+1415 files in other folders)
